--- a/index.css
+++ b/index.css
@@ -2,23 +2,14 @@ body, html {
 	margin: 0;
 	padding: 0;
 	font-family: 'Open Sans', sans-serif;
-	background: #fffa;
+	background: #000;
 	color: #fff;
+	width: auto;
 }
 
 body {
 	opacity: 0;
 	transition: opacity 2s ease-in-out, filter 2s ease-in-out;
-}
-
-#vanta {
-	width: 100%;
-	height: 100%;
-	z-index: 0;
-	position: relative;
-	left: 0;
-	right: 0;
-	top: 0;
 }
 
 .link,
@@ -30,7 +21,7 @@ button {
 	padding: 1em;
 	margin: 1em;
 	color: black;
-	background-color: #fffa;
+	background-color: #fff;
 	border-radius: 1em;
 	border: none;
 	width: 10em;
@@ -53,28 +44,25 @@ button {
 }
 
 .posts {
-	margin-top: 1em;
-	margin-left: 2em;
-	margin-right: 2em;
+	margin: 1em;
 }
 
 .posts > .post {
 	padding: 1em;
 	padding-top: 0.5em;
 	margin: 1em;
-	background-color: #000a;
-	color: white;
+	background-color: #fff;
+	color: black;
 	border-radius: 1em;
 	backdrop-filter: blur(10px) saturate(160%) contrast(180%);
 	-webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
 }
 
 .post_img {
-	background-color: #fff;
-	color: #000;
+	background-color: #000;
+	color: white;
 	padding: 20px;
 }
-
 
 #buttons {
 	flex-direction: row;
@@ -93,7 +81,7 @@ header > img {
 	width: 10em;
 	height: 10em;
 	border-radius: 1em;
-	border: 4px solid #2C3A47;
+	border: 4px solid white;
 	display: block;
 }
 
