--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body, html {
 	margin: 0;
 	padding: 0;
 	font-family: 'Open Sans', sans-serif;
-	background: #000;
+	background: #000000b8;
 	color: #fff;
 	width: auto;
 }
@@ -26,8 +26,6 @@ button {
 	border: none;
 	width: 10em;
 	display: inline-block;
-	backdrop-filter: blur(10px) saturate(160%) contrast(180%);
-	-webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
 }
 
 .menu {
@@ -54,12 +52,10 @@ button {
 	background-color: #fff;
 	color: black;
 	border-radius: 1em;
-	backdrop-filter: blur(10px) saturate(160%) contrast(180%);
-	-webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
 }
 
 .post_img {
-	background-color: #000;
+	background-color: #000000b8;
 	color: white;
 	padding: 20px;
 }
