--- a/index.css
+++ b/index.css
@@ -2,7 +2,8 @@ body, html {
 	margin: 0;
 	padding: 0;
 	font-family: 'Open Sans', sans-serif;
-	background: #000000b8;
+	/* background: #000000b8; */
+	background-color: #000000b8;
 	color: #fff;
 	width: auto;
 }
