--- a/index.css
+++ b/index.css
@@ -2,9 +2,8 @@ body, html {
 	margin: 0;
 	padding: 0;
 	font-family: 'Open Sans', sans-serif;
-	/* background: #000000b8; */
-	background-color: #000000b8;
-	color: #fff;
+	background-color: #f7f1e3;
+	color: #84817a;
 	width: auto;
 }
 
@@ -13,8 +12,7 @@ body {
 	transition: opacity 2s ease-in-out, filter 2s ease-in-out;
 }
 
-.link,
-button {
+.link, button {
 	font-weight: bold;
 	justify-content: center;
 	align-items: center;
@@ -22,7 +20,7 @@ button {
 	padding: 1em;
 	margin: 1em;
 	color: black;
-	background-color: #fff;
+	background-color: #84817a;
 	border-radius: 1em;
 	border: none;
 	width: 10em;
@@ -36,28 +34,29 @@ button {
 }
 
 .desc-box {
-	margin: 2em;
+	margin: 1em 20vw 1em 20vw;
 	font-size: 1.5em;
 	font-weight: bold;
-	color: white;
+	color: inherit;
 }
 
 .posts {
 	margin: 1em;
+	max-width: 75em;
 }
 
 .posts > .post {
 	padding: 1em;
 	padding-top: 0.5em;
 	margin: 1em;
-	background-color: #fff;
-	color: black;
+	background-color: #aaa69d;
+	color: #f7f1e3;
 	border-radius: 1em;
 }
 
 .post_img {
-	background-color: #000000b8;
-	color: white;
+	background-color: #84817a;
+	color: #f7f1e3;
 	padding: 20px;
 }
 
@@ -78,8 +77,24 @@ header > img {
 	width: 10em;
 	height: 10em;
 	border-radius: 1em;
-	border: 4px solid white;
+	border: 4px solid #84817a;
 	display: block;
+}
+
+.hvr-glow {
+  vertical-align: middle;
+  transform: perspective(1px) translateZ(0);
+  transition-duration: 0.3s;
+  transition-property: box-shadow;
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  display: inline-block;
+  -webkit-transform: perspective(1px) translateZ(0);
+  -webkit-transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+}
+
+.hvr-glow:hover, .hvr-glow:focus, .hvr-glow:active {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
 }
 
 /* TODO: move this to header too */
@@ -92,11 +107,69 @@ main {
 }
 
 a {
-	color: black;
+	padding: 0.5em;
 	text-decoration: none;
 	justify-content: center;
 	align-items: center;
-	white-space: nowrap;
-	gap: 0.5em;
-	display: flex;
+	color: #f7f1e3;
+	position: relative;
+}
+
+.icon {
+	filter: invert(92%) sepia(7%) saturate(664%) hue-rotate(334deg) brightness(107%) contrast(94%);
+}
+
+@-webkit-keyframes hvr-back-pulse {
+	50% {
+		background-color: white;
+	}
+}
+@keyframes hvr-back-pulse {
+	50% {
+		background-color: #d1ccc0;
+	}
+}
+
+.hvr-back-pulse {
+	background-color: #aaa69d;
+	font-weight: bold;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding: 1em;
+	margin: 0.5em;
+	vertical-align: middle;
+	transform: perspective(1px) translateZ(0);
+	overflow: hidden;
+	transition-duration: 0.5s;
+	transition-property: color, background-color;
+	border-radius: 1em;
+	border: none;
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	width: 10em;
+	display: inline-block;
+	-webkit-transition-property: color, background-color;
+	-webkit-transition-duration: 0.5s;
+	-webkit-transform: perspective(1px) translateZ(0);
+}
+
+.hvr-back-pulse:hover, .hvr-back-pulse:focus, .hvr-back-pulse:active {
+	animation-name: hvr-back-pulse;
+	animation-duration: 1s;
+	animation-delay: 0.5s;
+	animation-timing-function: linear;
+	animation-iteration-count: infinite;
+	background-color: #b33939;
+	color: white;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-delay: 0.5s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-iteration-count: infinite;
+}
+
+@media screen and (max-width: 500px){
+	.desc-box {
+		font-size: 1em !important;
+		margin: 1em;
+	}
 }
