--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,50 +1,44 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
+import PageLayout from "@/layouts/Base";
+import BlogPostPreview from "@/components/BlogPostPreview";
+import SocialList from "@/components/SocialList";
+import { sortMDByDate } from "@/util";
+import type { Post } from "@/types";
+
+const meta = {
+  title: "Fahad Jamil",
+  description: "Software engineering student",
+};
+
+const MAX_POSTS = 10;
+const allPosts = await Astro.glob<Post>("./posts/*.mdx");
+const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 ---
 
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body>
-		<Header title={SITE_TITLE} />
-		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
-		</main>
-		<Footer />
-	</body>
-</html>
+<PageLayout meta={meta}>
+  <section>
+    <h1 class="mb-6 title">Hi!</h1>
+    <p class="mb-4">
+    I'm a 23-year-old computer science engineering student at Uppsala
+    University, Sweden. I am currently doing my masters in Embedded systems.
+    <br>
+    <br>
+    On this page, you will find my portfolio as well as my different projects
+    that I've worked on. Feel free to send me a mail or a message on LinkedIn
+    for any queries.
+    </p>
+    <SocialList />
+  </section>
+  <section aria-label="Blog post list" class="mt-16">
+    <h2 class="mb-4 text-xl title">Projects</h2>
+    <ul class="space-y-4 sm:space-y-2">
+      {
+      allPostsByDate.map((p) => (
+      <li class="flex flex-wrap items-center gap-x-2 [&_q]:w-full">
+	<BlogPostPreview post={p} as="h2" />
+      </li>
+      ))
+      }
+    </ul>
+  </section>
+</PageLayout>
