--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,67 +1,34 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
-body {
-	font-family: Verdana, sans-serif;
-	margin: auto;
-	padding: 20px;
-	max-width: 65ch;
-	text-align: left;
-	background-color: #fff;
-	word-wrap: break-word;
-	overflow-wrap: break-word;
-	line-height: 1.5;
-	color: #444;
+@tailwind base;
+@layer base {
+	:root {
+		color-scheme: light;
+		--theme-bg: 0 0% 98%;
+		--theme-link: 172 18.1% 41.2%;
+		--theme-text: 202 10.5% 14.9%;
+		--theme-accent: 351 65.9% 48.2%;
+		--theme-accent-2: 0 0% 6.7%;
+		--theme-quote: 351 65.9% 48.2%;
+		--theme-menu-bg: hsl(0 0% 98% / 0.85);
+	}
+
+	:root.dark {
+		color-scheme: dark;
+		--theme-bg: 210 6.5% 12.2%;
+		--theme-link: 330 49.4% 66.7%;
+		--theme-text: 220 2.9% 79.4%;
+		--theme-accent: 159 62.8% 45.3%;
+		--theme-accent-2: 0 0% 93.3%;
+		--theme-quote: 102 100% 85.7%;
+		--theme-menu-bg: hsl(210 6.5% 12.2% / 0.85);
+	}
+
+	html {
+		@apply h-full border-t-2 border-textColor scroll-smooth;
+	}
+
+	html body {
+		@apply h-full max-w-3xl mx-auto px-8 pt-16 font-mono font-normal antialiased text-sm flex flex-col text-textColor bg-bgColor;
+	}
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-strong,
-b {
-	color: #222;
-}
-a {
-	color: #3273dc;
-}
-nav a {
-	margin-right: 10px;
-}
-textarea {
-	width: 100%;
-	font-size: 16px;
-}
-input {
-	font-size: 16px;
-}
-content {
-	line-height: 1.6;
-}
-table {
-	width: 100%;
-}
-img {
-	max-width: 100%;
-	height: auto;
-}
-code {
-	padding: 2px 5px;
-	background-color: #f2f2f2;
-}
-pre {
-	padding: 1rem;
-}
-pre > code {
-	all: unset;
-}
-blockquote {
-	border: 1px solid #999;
-	color: #222;
-	padding: 2px 0px 2px 20px;
-	margin: 0px;
-	font-style: italic;
-}
+@tailwind components;
+@tailwind utilities;
