--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import PageLayout from "@/layouts/Base";
 import { Image } from "@astrojs/image/components";
-import aboutImg from "../assets/about-astro.png";
+import aboutImg from "../../public/images/Fahad.jpg";
 
 const meta = {
 	title: "About",
@@ -15,12 +15,12 @@ const meta = {
 		<!-- <p>
 			Hi, I’m a starter Astro. I’m particularly great for getting you started
 			with your own blogging website.
-		</p>
+			</p> --!>
 		<div class="flex justify-center">
 			<Image src={aboutImg} alt="A cartoon cactus looking at 'Astro.build' logo"
 			/>
 		</div>
-		<p>Here are my some of my awesome built in features:</p>
+		<!--<p>Here are my some of my awesome built in features:</p>
 		<ul class="list-disc list-inside">
 			<li>I'm ultra fast as I'm a static site</li>
 			<li>I'm fully responsive</li>
@@ -40,6 +40,6 @@ const meta = {
 			>
 				repo
 			</a> if you like me!
-		</p> -->
+			</p>--!>
 	</div>
 </PageLayout>
