--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,23 +4,25 @@ import { Image } from "@astrojs/image/components";
 import aboutImg from "../../public/images/Fahad.jpg";
 
 const meta = {
-	title: "About",
-	description: "I'm a starter theme for Astro",
+  title: "About",
+  description: "I'm a starter theme for Astro",
 };
 ---
 
 <PageLayout meta={meta}>
-	<div class="space-y-6">
-		<h1 class="title">About</h1>
-		<!-- <p>
+  <div class="space-y-6">
+    <h1 class="title">About</h1>
+    <!-- <p>
 			Hi, I’m a starter Astro. I’m particularly great for getting you started
 			with your own blogging website.
-			</p> --!>
-		<div class="flex justify-center">
-			<Image src={aboutImg} alt="A cartoon cactus looking at 'Astro.build' logo"
-			/>
-		</div>
-		<!--<p>Here are my some of my awesome built in features:</p>
+			</p> -->
+    <div class="flex justify-center">
+      <Image
+        src={aboutImg}
+        alt="A cartoon cactus looking at 'Astro.build' logo"
+      />
+    </div>
+    <!--<p>Here are my some of my awesome built in features:</p>
 		<ul class="list-disc list-inside">
 			<li>I'm ultra fast as I'm a static site</li>
 			<li>I'm fully responsive</li>
@@ -40,6 +42,6 @@ const meta = {
 			>
 				repo
 			</a> if you like me!
-			</p>--!>
-	</div>
+			</p>-->
+  </div>
 </PageLayout>
