--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import PageLayout from "@/layouts/Base";
 import { Image } from "@astrojs/image/components";
-import aboutImg from "../../public/images/Fahad.jpg";
+import aboutImg from "../assets/Fahad.jpg";
 
 const meta = {
   title: "About",
