--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,6 @@ import aboutImg from "../assets/Fahad.jpg";
 
 const meta = {
   title: "About",
-  description: "I'm a starter theme for Astro",
 };
 ---
 
@@ -19,7 +18,7 @@ const meta = {
     <div class="flex justify-center">
       <Image
         src={aboutImg}
-        alt="This is Fahad :)"
+        alt="A cartoon cactus looking at 'Astro.build' logo"
       />
     </div>
     <!--<p>Here are my some of my awesome built in features:</p>
