--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ const meta = {
     <div class="flex justify-center">
       <Image
         src={aboutImg}
-        alt="A cartoon cactus looking at 'Astro.build' logo"
+        alt="This is Fahad"
       />
     </div>
     <!--<p>Here are my some of my awesome built in features:</p>
