--- a/styles.css
+++ b/styles.css
@@ -63,3 +63,14 @@ body {
     height: 100%;
     object-fit: cover;
 }
+
+@media (max-width: 768px) {
+    body {
+        font-size: 18px;
+    }
+
+    .fahad-icon {
+        width: 70px;
+        height: 70px;
+    }
+}
