--- a/styles.css
+++ b/styles.css
@@ -64,35 +64,13 @@ body {
     object-fit: cover;
 }
 
-@media (max-width: 375px) { /* iPhone 5, SE, 5C, 5S, 5th gen iPod touch */
+@media (max-width: 428px) {
     body {
-        font-size: 14px;
+        font-size: 22px;
     }
 
     .fahad-icon {
-        width: 60px;
-        height: 60px;
-    }
-}
-
-@media (max-width: 414px) { /* iPhone 6, 6S, 7, 8, 6th and 7th gen iPod touch */
-    body {
-        font-size: 16px;
-    }
-
-    .fahad-icon {
-        width: 80px;
-        height: 80px;
-    }
-}
-
-@media (max-width: 768px) { /* iPhone 6 Plus, 6S Plus, 7 Plus, 8 Plus */
-    body {
-        font-size: 18px;
-    }
-
-    .fahad-icon {
-        width: 100px;
-        height: 100px;
+        width: 140px;
+        height: 140px;
     }
 }
