--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,17 @@
+:root {
+    --red-color: rgba(255, 94, 87, 1);
+    --red-color0: rgba(255, 94, 87, 0);
+    --red-color02: rgba(255, 94, 87, 0.2);
+    --red-color03: rgba(255, 94, 87, 0.3);
+    --green-color: rgba(11, 232, 129, 1);
+    --green-color0: rgba(11, 232, 129, 0);
+    --green-color02: rgba(11, 232, 129, 0.2);
+    --green-color03: rgba(11, 232, 129, 0.3);
+}
+
 html, body {
     height: 100%;
-    width: 25%%;
+    width: 50%;
 }
 
 html {
@@ -13,14 +24,27 @@ body {
     vertical-align: middle;
 }
 
+.glass {
+    padding: 4vh;
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 10px;
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.2);
+}
+
 @media (prefers-color-scheme: light) {
     body {
         background-color: rgb(246, 246, 246);
         color: black;
     }
 
+    .glass {
+        background: linear-gradient(135deg, var(--green-color02), var(--green-color0));
+        border: 1px solid var(--green-color03);
+    }
+
     a {
-        color: rgb(96, 194, 83);
+        color: var(--green-color);
     }
 }
 
@@ -30,8 +54,13 @@ body {
         color: white;
     }
 
+    .glass {
+        background: linear-gradient(135deg, var(--red-color02), var(--red-color0));
+        border: 1px solid var(--red-color03);
+    }
+
     a {
-        color: rgb(237, 106, 94);
+        color: var(--red-color);
     }
 }
 
@@ -40,6 +69,7 @@ body {
     left: 10px;
     bottom: 10px;
 }
+
 .gif-container img {
     width: 137px;
     height: auto;
@@ -54,7 +84,7 @@ body {
 .fahad-icon {
     width: 100px;
     height: 100px;
-    border-radius: 5%;
+    border-radius: 10px;
     overflow: hidden;
 }
 
