--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
 }
 
 .glass {
-    padding: 4vh;
+    padding: 4vw;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
     border-radius: 10px;
@@ -71,7 +71,7 @@ body {
 }
 
 .gif-container img {
-    width: 137px;
+    width: 50%;
     height: auto;
 }
 
@@ -92,15 +92,4 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-@media (max-width: 428px) {
-    body {
-        font-size: 22px;
-    }
-
-    .fahad-icon {
-        width: 140px;
-        height: 140px;
-    }
 }
