--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,22 @@
 :root {
-    --red-color:        rgba(255, 94, 87, 1.0);
-    --red-color0:       rgba(255, 94, 87, 0.0);
-    --red-color02:      rgba(255, 94, 87, 0.2);
-    --red-color03:      rgba(255, 94, 87, 0.3);
+    --red-color: rgba(255, 94, 87, 1.0);
+    --red-color0: rgba(255, 94, 87, 0.0);
+    --red-color02: rgba(255, 94, 87, 0.2);
+    --red-color03: rgba(255, 94, 87, 0.3);
 
-    --peach-color:      rgba(255, 168, 1, 1.0);
+    --peach-color: rgba(255, 168, 1, 1.0);
 
-    --green-color:      rgba(11, 232, 129, 1.0);
-    --green-color0:     rgba(11, 232, 129, 0.0);
-    --green-color02:    rgba(11, 232, 129, 0.2);
-    --green-color03:    rgba(11, 232, 129, 0.3);
+    --green-color: rgba(11, 232, 129, 1.0);
+    --green-color0: rgba(11, 232, 129, 0.0);
+    --green-color02: rgba(11, 232, 129, 0.2);
+    --green-color03: rgba(11, 232, 129, 0.3);
 
-    --white-color:      rgba(246, 246, 246, 1.0);
-    --dark-color:       rgba(40, 40, 40, 1.0);
+    --white-color: rgba(246, 246, 246, 1.0);
+    --dark-color: rgba(40, 40, 40, 1.0);
 }
 
-html, body {
+html,
+body {
     height: 100%;
     width: 50%;
 }
@@ -34,7 +35,9 @@ body {
 }
 
 @media screen and (max-width: 500px) {
-    html, body {
+
+    html,
+    body {
         width: 90%;
         font-size: 14px;
     }
@@ -111,4 +114,3 @@ body {
     height: 100%;
     object-fit: cover;
 }
-
