--- a/styles.css
+++ b/styles.css
@@ -22,8 +22,6 @@ html {
 
 body {
     font-family: monospace;
-    font-weight: 500;
-    font-size: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -35,26 +33,46 @@ h3 {
     margin-top: 0;
 }
 
-@media screen and (max-width: 500px) {
-
-    body {
-        font-size: 14px;
+@media screen and (max-width: 600px) {
+    .main-wrapper {
+        width: 100% !important;
     }
 
-    .main-wrapper {
-        width: 20rem;
+    .timeline-year {
+        margin-left: -4.5rem !important;
+    }
+
+    .timeline-year::before {
+        content: "" !important;
+        width: 0.5rem !important;
+        height: 0.5rem !important;
+        background-color: var(--red-button-color) !important;
+        position: absolute !important;
+        border-radius: 10% !important;
+        right: 3.3rem !important;
+    }
+
+    .timeline-year::after {
+        content: none !important;
+    }
+    
+    .middle-placer {
+        height: 15vh !important;
     }
 }
 
 @media (prefers-color-scheme: light) {
     body {
         background-color: var(--white-color);
-        font-weight: 500;
         color: black;
     }
 
     .glass {
         background: white;
+    }
+
+    .half-a-border-on-top::after {
+        background-color: var(--white-color);
     }
 
     a {
@@ -65,13 +83,16 @@ h3 {
 @media (prefers-color-scheme: dark) {
     body {
         background-color: var(--dark-color);
-        font-weight: 400;
         color: white;
     }
 
     .glass {
         background: linear-gradient(135deg, var(--red-color02), var(--red-color0));
         border: 1px solid var(--red-color03);
+    }
+
+    .half-a-border-on-top::after {
+        background-color: var(--dark-color);
     }
 
     a {
@@ -138,7 +159,6 @@ h3 {
     content: "";
     width: 50%;
     height: 10px;
-    background-color: var(--white-color);
     position: absolute;
     right: 0;
     top: -2px;
